# backend/src/main/java/com/odde/doughnut/entities/repositories/NotePropertyIndexRepository.java
@@ -13,7 +13,7 @@ public interface NotePropertyIndexRepository extends JpaRepository<NotePropertyI
   String unassimilatedJoinPropertyTracker =
       " LEFT JOIN n.memoryTrackers mt ON mt.user.id = :userId"
           + " AND mt.deletedAt IS NULL"
-          + " AND COALESCE(mt.spelling, FALSE) = FALSE"
+          + " AND mt.type <> com.odde.doughnut.entities.MemoryTrackerType.SPELLING"
           + " AND mt.propertyKey = i.propertyKey";
 
   String targetNoteKeyGateWhere =
